--- a/SistemaTickets/SistemaTickets/Views/Home/Index.cshtml
+++ b/SistemaTickets/SistemaTickets/Views/Home/Index.cshtml
@@ -2,5 +2,7 @@
     ViewBag.Title = "Sistema de Tickets";
 }
 
-<h3>SISTEMA DE TICKETS - UTEC</h3>
+<h3>SISTEMA DE TICKETS UTEC</h3>
 <hr />
+
+<img src="~/Content/img/logo-utec.png" alt="Alternate Text" />
