--- a/SistemaTickets/SistemaTickets/Views/Roles/ModificarForm.cshtml
+++ b/SistemaTickets/SistemaTickets/Views/Roles/ModificarForm.cshtml
@@ -9,22 +9,23 @@
 
 @using (Html.BeginForm("Modificar", "Roles", FormMethod.Post)) { 
 <div class="row">
-    <div class="col-3 d-grid">
+    <div class="col-2">
         @Html.HiddenFor(rol => rol.IdRol)
-
-        @Html.LabelFor(rol => rol.Nombre)
-        @Html.TextBoxFor(rol => rol.Nombre, "", new { @class = "form-control" })
-
-        @Html.LabelFor(rol => rol.Activo)
-        @Html.CheckBoxFor(rol => rol.Activo, true)
-
+        <div class="mb-3">
+            @Html.LabelFor(rol => rol.Nombre)
+            @Html.TextBoxFor(rol => rol.Nombre, "", new { @class = "form-control" })
+        </div>
+        <div class="mb-3">
+            @Html.LabelFor(rol => rol.Activo)
+            @Html.CheckBoxFor(rol => rol.Activo, true)
+        </div>
         @Html.HiddenFor(rol => rol.IdUsuarioMod)
-
         @Html.HiddenFor(rol => rol.FechaMod)
-        <br />
-        <input type="submit" class="btn btn-success" value="Modificar" />
+        <div class="mb-3 d-grid">
+            <input type="submit" class="btn btn-success" value="Modificar" />
+        </div>
     </div>
-    <div class="col-9"></div>
+    <div class="col-10"></div>
 </div>
 }
 
