--- a/SistemaTickets/SistemaTickets/Views/Roles/RegistrarForm.cshtml
+++ b/SistemaTickets/SistemaTickets/Views/Roles/RegistrarForm.cshtml
@@ -9,14 +9,15 @@
 
 @using (Html.BeginForm("Registrar", "Roles", FormMethod.Post)) {
     <div class="row">
-        <div class="col-3 d-grid">
-            <div>
+        <div class="col-2">
+            <div class="mb-3">
                 @Html.LabelFor(rol => rol.Nombre)
-                @Html.TextBoxFor(rol => rol.Nombre, (string)"", (object)(new { @class = "form-control" }))
-</div>
-            <br />
-            <input type="submit" class="btn btn-primary" value="Registrar" />
+                @Html.TextBoxFor(rol => rol.Nombre, "", (new { @class = "form-control" }))
+            </div>
+            <div class="mb-3 d-grid">
+                <input type="submit" class="btn btn-primary" value="Registrar" />
+            </div>
         </div>
-        <div class="col-9"></div>
+        <div class="col-10"></div>
     </div>
 }
