--- a/SistemaTickets/SistemaTickets/Views/Shared/_Layout.cshtml
+++ b/SistemaTickets/SistemaTickets/Views/Shared/_Layout.cshtml
@@ -8,37 +8,39 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-
+    
+    @if(Session["usuario"] != null) {
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+
+        <div class="inf-usu-log">
+            Usuario: @Session["usuario"] 
+            <br />
+            Rol: @Session["rol"] 
+            <br />
+            __________________________________
+        </div>
+
         @Html.ActionLink("Inicio", "Index", "Home", null, new { @class = "" })
         @Html.ActionLink("Mantenimientos", "Index", "Mantenimientos", null, new { @class = "" })
         <a href="#">Ordenes de Trabajo</a>
         <a href="#">Reportes</a>
-        <a href="#">Cerrar</a>
+        @Html.ActionLink("Cerrar Sesion", "CerrarSesion", "Login", null, new { @class = "" })
     </div>
+    }    
 
-    <div id="main">
+<div id="main">
+    @if (Session["usuario"] != null) {
         <button class="openbtn" onclick="openNav()">☰</button>
         <br /><br />
-        <div class="container-fluid body-content">
-            @RenderBody()
-        </div>
+    }
+    <div class="container-fluid body-content">
+        @RenderBody()
     </div>
+</div>
     
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-    <script>
-        function openNav() {
-            document.getElementById("mySidebar").style.width = "250px";
-            document.getElementById("main").style.marginLeft = "250px";
-        }
-
-        function closeNav() {
-            document.getElementById("mySidebar").style.width = "0";
-            document.getElementById("main").style.marginLeft = "0";
-        }
-    </script>
 </body>
 </html>
